# fixed_asset

./: .eslintrc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
asset/: __init__.py  hooks.py  install.py  patches.txt  setup.py  uninstall.py
asset/asset/: dashboard_fixtures.py
asset/asset/asset_dashboard/asset/: asset.json
asset/asset/controllers/accounts_controller/: accounts_controller.py
asset/asset/controllers/buying_controller/: buying_controller.py
asset/asset/controllers/stock_controller/: stock_controller.py
asset/asset/custom_fields/: accounts_settings.json  company.json  item.json  landed_cost_item.json  material_request_item.json  pos_invoice_item.json  purchase_invoice_item.json  purchase_order_item.json  purchase_receipt_item.json  sales_invoice_item.json  serial_no.json  stock_entry.json
asset/asset/customizations/accounting_period/: accounting_period.py
asset/asset/customizations/bom/: bom.js
asset/asset/customizations/company/: company.js  company.py
asset/asset/customizations/finance_book/: finance_book_dashboard.py
asset/asset/customizations/gl_entry/: gl_entry.py
asset/asset/property_setter/: item.json  journal_entry_account.json  purchase_invoice_item.json  serial_and_batch_bundle.json  subcontracting_receipt_item.json
asset/patches/post_install/: make_asset_finance_book_against_old_entries.py  make_location_from_warehouse.py  merge_land_unit_with_location.py
asset/patches/v15_0/: rename_purchase_receipt_amount_to_purchase_amount.py
asset/public/js/: asset.bundle.js  help_links.js
(+129 files in other folders)
